welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:28: error: not found: value newPosition
    newPosition(1) = position(1)+1
    ^ColumnByColumn:31: error: not found: value newPosition
    newPosition(1) = 0
    ^ColumnByColumn:32: error: not found: value newPosition
    newPosition(0) = position(0)+1
    ^ColumnByColumn:34: error: not found: value newPosition
  return newPosition
         ^